[package]
edition = "2021"
name = "pico-example"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lib]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp-pico = "0.9"
embedded-graphics = "0.8.1"
epd-waveshare = { version = "0.6.0", features = ["graphics"] }
embedded-hal-bus = "0.2.0"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }

bevy_ecs = { git = "https://github.com/bushrat011899/bevy", branch = "NoSTDBevyApp", default-features = false, features = [
    "portable-atomic",
    "critical-section",
] }
bevy_app = { git = "https://github.com/bushrat011899/bevy", branch = "NoSTDBevyApp", default-features = false, features = [
    "portable-atomic",
    "critical-section",
] }

embedded-alloc = "0.6.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
